--- a/ckanext/feedback/i18n/ja/LC_MESSAGES/ckanext-feedback.po
+++ b/ckanext/feedback/i18n/ja/LC_MESSAGES/ckanext-feedback.po
@@ -21,7 +21,7 @@ msgstr ""
 
 #: ckanext/feedback/templates/header.html:9
 msgid "Sysadmin settings"
-msgstr "Sysadmin settings"
+msgstr "システム管理者設定"
 
 #: ckanext/feedback/templates/header.html:11
 msgid "Admin"
@@ -29,7 +29,7 @@ msgstr "管理者"
 
 #: ckanext/feedback/templates/header.html:16
 msgid "View profile"
-msgstr "View profile"
+msgstr "プロフィールを表示"
 
 #: ckanext/feedback/templates/header.html:23
 #, python-format
@@ -44,7 +44,7 @@ msgstr "ダッシュボード"
 #: ckanext/feedback/templates/header.html:33
 #: ckanext/feedback/templates/header.html:35
 msgid "Profile settings"
-msgstr "Profile settings"
+msgstr "プロフィール設定"
 
 #: ckanext/feedback/templates/header.html:40
 #: ckanext/feedback/templates/header.html:42
@@ -65,11 +65,11 @@ msgstr "保存"
 
 #: ckanext/feedback/templates/header.html:69
 msgid "Toggle navigation"
-msgstr "Toggle navigation"
+msgstr "トグル ナビゲーション"
 
 #: ckanext/feedback/templates/header.html:90
 msgid "Top"
-msgstr "トップ"
+msgstr "Top"
 
 #: ckanext/feedback/templates/header.html:91
 msgid "Dataset"
@@ -98,7 +98,7 @@ msgstr "About"
 
 #: ckanext/feedback/templates/header.html:110
 msgid "Search Datasets"
-msgstr "Search Datasets"
+msgstr "データセット検索"
 
 #: ckanext/feedback/templates/header.html:111
 msgid "Search"
@@ -106,29 +106,29 @@ msgstr "検索"
 
 #: ckanext/feedback/templates/header.html:111
 msgid "Search datasets"
-msgstr "Search datasets"
+msgstr "データセット検索"
 
 #: ckanext/feedback/templates/header.html:112
 #: ckanext/feedback/templates/utilization/search.html:68
 msgid "Submit"
-msgstr "Submit"
+msgstr "検索"
 
 #: ckanext/feedback/templates/package/resource_read.html:5
 msgid "Manage"
-msgstr "Manage"
+msgstr "管理"
 
 #: ckanext/feedback/templates/package/resource_read.html:12
 msgid "View"
-msgstr "View"
+msgstr "ビュー"
 
 #: ckanext/feedback/templates/package/resource_read.html:14
 msgid "API Endpoint"
-msgstr "API Endpoint"
+msgstr "API エンドポイント"
 
 #: ckanext/feedback/templates/package/resource_read.html:16
 #: ckanext/feedback/templates/package/snippets/resource_item.html:47
 msgid "Go to resource"
-msgstr "Go to resource"
+msgstr "リソースへ行く"
 
 #: ckanext/feedback/templates/package/resource_read.html:18
 #: ckanext/feedback/templates/package/snippets/resource_item.html:44
@@ -142,15 +142,15 @@ msgstr "URL"
 
 #: ckanext/feedback/templates/package/resource_read.html:55
 msgid "Additional Information"
-msgstr "Additional Information"
+msgstr "追加情報"
 
 #: ckanext/feedback/templates/package/resource_read.html:59
 msgid "Field"
-msgstr "Field"
+msgstr "フィールド"
 
 #: ckanext/feedback/templates/package/resource_read.html:60
 msgid "Value"
-msgstr "Value"
+msgstr "値"
 
 #: ckanext/feedback/templates/package/resource_read.html:66
 #: ckanext/feedback/templates/package/snippets/additional_info.html:6
@@ -161,77 +161,77 @@ msgstr "ダウンロード数"
 
 #: ckanext/feedback/templates/package/resource_read.html:71
 msgid "Data last updated"
-msgstr "Data last updated"
+msgstr "最終更新日"
 
 #: ckanext/feedback/templates/package/resource_read.html:72
 #: ckanext/feedback/templates/package/resource_read.html:76
 #: ckanext/feedback/templates/package/resource_read.html:80
 #: ckanext/feedback/templates/package/resource_read.html:84
 msgid "unknown"
-msgstr "unknown"
+msgstr "不明"
 
 #: ckanext/feedback/templates/package/resource_read.html:75
 msgid "Metadata last updated"
-msgstr "Metadata last updated"
+msgstr "メタデータ 最終更新日時"
 
 #: ckanext/feedback/templates/package/resource_read.html:79
 #: ckanext/feedback/templates/package/snippets/additional_info.html:64
 msgid "Created"
-msgstr "Created"
+msgstr "作成日"
 
 #: ckanext/feedback/templates/package/resource_read.html:83
 msgid "Format"
-msgstr "Format"
+msgstr "フォーマット"
 
 #: ckanext/feedback/templates/package/resource_read.html:87
 msgid "License"
-msgstr "License"
+msgstr "ライセンス"
 
 #: ckanext/feedback/templates/package/snippets/additional_info.html:12
 msgid "Source"
-msgstr "Source"
+msgstr "ソース"
 
 #: ckanext/feedback/templates/package/snippets/additional_info.html:22
 #: ckanext/feedback/templates/package/snippets/additional_info.html:27
 msgid "Author"
-msgstr "Author"
+msgstr "作成者"
 
 #: ckanext/feedback/templates/package/snippets/additional_info.html:33
 #: ckanext/feedback/templates/package/snippets/additional_info.html:38
 msgid "Maintainer"
-msgstr "Maintainer"
+msgstr "メンテナー"
 
 #: ckanext/feedback/templates/package/snippets/additional_info.html:44
 msgid "Version"
-msgstr "Version"
+msgstr "バージョン"
 
 #: ckanext/feedback/templates/package/snippets/additional_info.html:50
 msgid "State"
-msgstr "State"
+msgstr "状態"
 
 #: ckanext/feedback/templates/package/snippets/additional_info.html:56
 msgid "Last Updated"
-msgstr "Last Updated"
+msgstr "最終更新"
 
 #: ckanext/feedback/templates/package/snippets/resource_item.html:23
 msgid "Explore"
-msgstr "Explore"
+msgstr "探索"
 
 #: ckanext/feedback/templates/package/snippets/resource_item.html:32
 msgid "Preview"
-msgstr "Preview"
+msgstr "プレビュー"
 
 #: ckanext/feedback/templates/package/snippets/resource_item.html:35
 msgid "More information"
-msgstr "More information"
+msgstr "詳細情報の表示"
 
 #: ckanext/feedback/templates/package/snippets/resource_item.html:56
 msgid "Edit"
-msgstr "Edit"
+msgstr "編集"
 
 #: ckanext/feedback/templates/package/snippets/resources_list.html:14
 msgid "Data and Resources"
-msgstr "Data and Resource"
+msgstr "データとリソース"
 
 #: ckanext/feedback/templates/package/snippets/resources_list.html:38
 #, python-format
@@ -242,35 +242,35 @@ msgstr "このデータセットにはデータがありません"
 
 #: ckanext/feedback/templates/package/snippets/resources_list.html:42
 msgid "This dataset has no data"
-msgstr "This dataset has no data"
+msgstr "このデータセットにはデータがありません"
 
 #: ckanext/feedback/templates/snippets/package_item.html:31
 msgid "Private"
-msgstr "Private"
+msgstr "プライベート"
 
 #: ckanext/feedback/templates/snippets/package_item.html:40
 msgid "Draft"
-msgstr "Draft"
+msgstr "下書き"
 
 #: ckanext/feedback/templates/snippets/package_item.html:42
 msgid "Deleted"
-msgstr "Deleted"
+msgstr "削除済"
 
 #: ckanext/feedback/templates/snippets/package_item.html:50
 msgid "Popular"
-msgstr "Popular"
+msgstr "人気"
 
 #: ckanext/feedback/templates/snippets/package_item.html:57
 msgid "This dataset has no description"
-msgstr "This dataset has no description"
+msgstr "このデータセットには説明がありません"
 
 #: ckanext/feedback/templates/utilization/search.html:8
 msgid "Skip to content"
-msgstr "Skip to content"
+msgstr "コンテンツへスキップ"
 
 #: ckanext/feedback/templates/utilization/search.html:32
 msgid "Breadcrumb"
-msgstr "Breadcrumb"
+msgstr "パンくずリスト"
 
 #: ckanext/feedback/templates/utilization/search.html:66
 msgid "キーワード検索..."
@@ -278,5 +278,5 @@ msgstr "キーワード検索..."
 
 #: ckanext/feedback/templates/utilization/search.html:66
 msgid "Search utilizaton data"
-msgstr "Search utilization data"
+msgstr "利活用方法を検索"
 
