--- a/ckanext/feedback/i18n/ja/LC_MESSAGES/ckanext-feedback.po
+++ b/ckanext/feedback/i18n/ja/LC_MESSAGES/ckanext-feedback.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ckanext-feedback 0.0.1\n"
 "Report-Msgid-Bugs-To: info.c3lab@gmail.com\n"
-"POT-Creation-Date: 2023-03-15 19:31+0900\n"
+"POT-Creation-Date: 2023-03-27 09:57+0900\n"
 "PO-Revision-Date: 2023-03-01 14:16+0900\n"
 "Last-Translator: c3Lab <info.c3lab@gmail.com>\n"
 "Language: ja\n"
@@ -89,6 +89,7 @@ msgstr "Top"
 
 #: ckanext/feedback/templates/header.html:91
 #: ckanext/feedback/templates/utilization/details.html:76
+#: ckanext/feedback/templates/utilization/search.html:94
 msgid "Dataset"
 msgstr "データセット"
 
@@ -177,7 +178,7 @@ msgstr "値"
 msgid "Downloads"
 msgstr "ダウンロード数"
 
-#: ckanext/feedback/templates/package/resource_read.html:71
+#: ckanext/feedback/templates/package/resource_read.html:75
 msgid "Data last updated"
 msgstr "最終更新日"
 
@@ -324,19 +325,58 @@ msgstr "課題解決"
 msgid "Comments"
 msgstr "コメント数"
 
-#: ckanext/feedback/templates/utilization/details.html:98
+#: ckanext/feedback/templates/utilization/details.html:97
 msgid "Comment"
 msgstr "コメント"
 
-#: ckanext/feedback/templates/utilization/details.html:108
+#: ckanext/feedback/templates/utilization/details.html:107
 msgid "Send comment"
 msgstr "コメント送信"
+
+#: ckanext/feedback/templates/utilization/search.html:65
+msgid "Keyword Search"
+msgstr "キーワード検索"
 
 #: ckanext/feedback/templates/utilization/search.html:67
 msgid "Keyword Search..."
 msgstr "キーワード検索..."
 
-#: ckanext/feedback/templates/utilization/search.html:66
+#: ckanext/feedback/templates/utilization/search.html:67
 msgid "Search utilization data"
 msgstr "利活用方法を検索"
+
+#: ckanext/feedback/templates/utilization/search.html:76
+#: ckanext/feedback/templates/utilization/search.html:98
+msgid "Status"
+msgstr "ステータス"
+
+#: ckanext/feedback/templates/utilization/search.html:78
+#: ckanext/feedback/templates/utilization/search.html:117
+msgid "Unapproved"
+msgstr "承認待ち"
+
+#: ckanext/feedback/templates/utilization/search.html:80
+#: ckanext/feedback/templates/utilization/search.html:115
+msgid "Approved"
+msgstr "承認済"
+
+#: ckanext/feedback/templates/utilization/search.html:89
+msgid "Search result："
+msgstr "検索結果："
+
+#: ckanext/feedback/templates/utilization/search.html:89
+msgid "items"
+msgstr "件"
+
+#: ckanext/feedback/templates/utilization/search.html:93
+msgid "Title"
+msgstr "タイトル"
+
+#: ckanext/feedback/templates/utilization/search.html:95
+msgid "Data resource"
+msgstr "データリソース"
+
+#: ckanext/feedback/templates/utilization/search.html:96
+msgid "Registration date"
+msgstr "登録日"
 
