--- a/ckanext/feedback/i18n/ja/LC_MESSAGES/ckanext-feedback.po
+++ b/ckanext/feedback/i18n/ja/LC_MESSAGES/ckanext-feedback.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ckanext-feedback 0.0.1\n"
 "Report-Msgid-Bugs-To: info.c3lab@gmail.com\n"
-"POT-Creation-Date: 2023-03-29 20:16+0900\n"
+"POT-Creation-Date: 2023-03-30 22:44+0900\n"
 "PO-Revision-Date: 2023-03-01 14:16+0900\n"
 "Last-Translator: c3Lab <info.c3lab@gmail.com>\n"
 "Language: ja\n"
@@ -19,14 +19,14 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.7.0\n"
 
-#: ckanext/feedback/controllers/resource.py:46
-#: ckanext/feedback/controllers/utilization.py:119
+#: ckanext/feedback/controllers/resource.py:50
+#: ckanext/feedback/controllers/utilization.py:127
 msgid ""
 "Your comment has been sent.<br>The comment will not be displayed until "
 "approved by an administrator."
 msgstr "コメント送信が完了しました。<br>管理者にコメントが承認されるまで表示されません。"
 
-#: ckanext/feedback/controllers/utilization.py:64
+#: ckanext/feedback/controllers/utilization.py:68
 msgid ""
 "Your application is complete.<br>The utilization will not be displayed "
 "until approved by an administrator."
@@ -51,6 +51,14 @@ msgstr "宣伝"
 #: ckanext/feedback/models/utilization.py:18
 msgid "Thank"
 msgstr "感謝"
+
+#: ckanext/feedback/services/common/check.py:10
+msgid ""
+"The requested URL was not found on the server. If you entered the URL "
+"manually please check your spelling and try again."
+msgstr ""
+"要求された URL がサーバー上に見つかりませんでした。"
+"URL を手動で入力した場合は、綴りを確認してからもう一度お試しください。"
 
 #: ckanext/feedback/templates/header.html:9
 msgid "Sysadmin settings"
@@ -409,8 +417,7 @@ msgstr "課題解決の認定とは？"
 msgid ""
 "If it is determined that the content of the utilization method leads to "
 "the solution of the problem, it can be certified as a problem solution."
-msgstr ""
-"利活用方法の内容が課題の解決につながると判断したものを課題解決として認定することができます。"
+msgstr "利活用方法の内容が課題の解決につながると判断したものを課題解決として認定することができます。"
 
 #: ckanext/feedback/templates/utilization/details.html:111
 msgid "Contents of issue resolution"
